# ccl-lens

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.sh  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
sprint01/: README.md
sprint02/: README.md
src/: App.tsx  account.ts  api.ts  format.ts  parse.ts  status.ts  styles.css  types.ts  usage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  ca.rs  claude.rs  commands.rs  lib.rs  main.rs  mitm.rs  models.rs  pricing.rs  proxy.rs  sse.rs  state.rs  store.rs  tray.rs  upstream.rs
src/components/: AccountPanel.tsx  Connection.tsx  Header.tsx  RequestDetail.tsx  Settings.tsx  Stats.tsx  StatusBar.tsx  Timeline.tsx  Upstreams.tsx
