[package]
name = "ccl-lens"
version = "0.1.0"
description = "Claude Code lens: intercepting proxy + token/cost observability"
authors = ["wanghui"]
edition = "2021"

[lib]
name = "ccl_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "socks", "rustls-tls", "http2"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
