[package]
name = "ccl-lens"
version = "0.1.0"
description = "Claude Code lens: intercepting proxy + token/cost observability"
authors = ["wanghui"]
edition = "2021"

[lib]
name = "ccl_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tokio-socks = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["stream", "socks", "rustls-tls", "http2"] }
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"
